--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/rc-slider": "^8.6.0",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
+    "@types/react-tooltip": "^3.9.2",
     "@types/uuid": "^3.4.4",
     "autoprefixer": "^9.4.7",
     "babel-core": "^6.26.3",
@@ -121,6 +122,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.1",
     "react-sizeme": "^2.5.2",
+    "react-tooltip": "^3.10.0",
     "uuid": "^3.3.2",
     "wait-on": "^3.2.0"
   }
